--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,7 +9,7 @@ name: App-CICD
 on:
   push:
     branches:
-     - master
+     - main
     paths:
      - 'test/**'
      
@@ -30,9 +30,11 @@ jobs:
       - name: Checkout 
         uses: actions/checkout@v3
      
-      # Build the code
-      - name: Build Code
-        run: npm install
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+    
+      - name: Run build with Gradle Wrapper
+        run: ./gradlew build
     
       # Configure AWS credentials
       - name: Configure AWS credentials
