--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,11 +30,16 @@ jobs:
       - name: Checkout 
         uses: actions/checkout@v3
      
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-    
-      - name: Run build with Gradle Wrapper
-        run: ./gradlew build
+      # Set up JDK 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'adopt'
+          
+      # Build with Gradle
+      - name: Build with Gradle
+        run: ./gradlew build --scan
     
       # Configure AWS credentials
       - name: Configure AWS credentials
