--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,16 @@ jobs:
       - name: Checkout 
         uses: actions/checkout@v3
       
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+       # Set up JDK 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'adopt'
+          
+      # Build with Gradle
+      - name: Build with Gradle
+        run: ./gradlew build --scan
     
-      - name: Run build with Gradle Wrapper
-        run: ./gradlew build
-      
 
          
