--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,7 +40,7 @@ jobs:
           
       # Build with Gradle
       - name: Build with Gradle
-        run: ./gradlew build --scan
+        run: ./gradlew build --scan --no-daemon
     
       # Configure AWS credentials
       - name: Configure AWS credentials
