--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,6 +41,12 @@ jobs:
       # Build with Gradle
       - name: Build with Gradle
         run: ./gradlew build --scan --no-daemon
+        
+     #   - name: Archive test report
+     #   uses: actions/upload-artifact@v2
+     #   with:
+     #     name: Test report
+     #     path: build/reports/tests/test
     
       # Configure AWS credentials
       - name: Configure AWS credentials
